--- a/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
+++ b/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
@@ -143,7 +143,7 @@ jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
     Verkauf: Fröbelstrasse 24, A-4020 Linz, Austria<br />
     Firmenbuchnummer: 82801t<br />
     Handelsgericht: Landesgericht Linz<br />
-    Geschäftsführer: Kamran Arfaian<br />
+    Geschäftsführer: Doris Hockl<br />
     UID-Nr.: ATU23315801</span></p>
 
 </BODY>
