--- a/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function1.htm
+++ b/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function1.htm
@@ -13,17 +13,25 @@
 			<td height="49">
 			<table border="0" width="743" id="table15" cellspacing="0" cellpadding="0">
 				<tr>
-					<td align="center" width="731" style="height: 38px" colspan="3">
+					<td align="center" width="731" style="height: 38px" colspan="4">
 					<b><font color="#CC1008" face="Verdana" size="6">Willkommen bei arfaian.com<br>Welcome at arfaian.com</font></b></td>
 				</tr>
 				<tr>
-					<td align="center" width="1100" style="height: 38px" colspan="3">
+					<td align="center" width="1100" style="height: 38px" colspan="4">
 					<p>&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
-					<p align="right"><a href="default.asp?ArtNr=10527">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/L100.gif"></a></td>
+					<td align="center" width="331">
+					<p align="right" style="margin-top: 0; margin-bottom: 0">
+					<a href="default.asp?ArtNr=10475">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/D476-1.gif"></a></td>
+					<td align="center" width="27">
+					<p style="margin-top: 0; margin-bottom: 0" align="left">
+					<a href="default.asp?ArtNr=10475">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/D476-2-1.gif"></a></p>
+					<p style="margin-top: 0; margin-bottom: 0" align="left">
+					<a href="default.asp?ArtNr=10229">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/D476-2-2.gif"></a></td>
 					<td align="center" width="4">&nbsp;</td>
 					<td align="center">
 					<table border="0" width="99%" cellspacing="0" cellpadding="0">
@@ -62,7 +70,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center" width="361" style="height: 19px">
+					<td align="center" width="361" style="height: 19px" colspan="2">
 					&nbsp;</td>
 					<td align="center" width="4" style="height: 19px">
 					&nbsp;</td>
@@ -70,7 +78,7 @@
 					&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361" style="height: 28px">
+					<td align="center" width="361" style="height: 28px" colspan="2">
 					<p align="right"><a href="default.asp?ArtNr=10294">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/1.gif"></a></td>
 					<td align="center" width="4" style="height: 28px">
@@ -80,13 +88,13 @@
 					<img border="0" src="skins/skin_arfaian_2009/images/start/2.gif"></a></td>
 				</tr>
 				<tr>
-					<td align="center" width="361">&nbsp;</td>
+					<td align="center" width="361" colspan="2">&nbsp;</td>
 					<td align="center" width="4">&nbsp;</td>
 					<td align="center">
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right" style="margin-top: 3px; margin-bottom: 3px">
 					<a href="default.asp?ArtNr=10327">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/3-1-1.gif"></a><a href="default.asp?ArtNr=10329"><img border="0" src="skins/skin_arfaian_2009/images/start/3-1-2.gif"></a></td>
@@ -122,91 +130,65 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					&nbsp;</td>
 					<td align="center" width="4">&nbsp;</td>
 					<td align="center">
 					&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361" height="188">
-					<table border="0" width="359" cellspacing="0" cellpadding="0">
-						<tr>
-							<td>
-					<p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10483">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(2).gif"></a></p>
-					<p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10490">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-1).gif"></a><p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10489">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-2).gif"></a><p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10488">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-3).gif"></a><p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10487">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-4).gif"></a><p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10486">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-5).gif"></a><p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10485">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-6).gif"></a><p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10484">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-7).gif"></a><p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10483">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(3-8).gif"></a></td>
-							<td width="26"><a href="default.asp?ArtNr=10486">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/10(1).gif"></a></td>
-						</tr>
-					</table>
-					</td>
+					<td align="center" width="361" height="188" colspan="2">
+					<p align="right"><a href="default.asp?ArtNr=10243">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/D093.gif"></a></td>
 					<td width="4" height="188">
 					<p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</td>
 					<td width="381" height="188">
-					<a href="default.asp?ArtNr=10515">
+					<a href="default.asp?ArtNr=10554">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/20.gif"></a></td>
 				</tr>
 				<tr>
-					<td align="center" width="361">&nbsp;</td>
+					<td align="center" width="361" colspan="2">&nbsp;</td>
 					<td align="center" width="4">&nbsp;</td>
 					<td align="center">
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right"><a href="default.asp?ArtNr=10192">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/7.gif"></a></td>
 					<td align="center" width="4">
 					<p align="left">&nbsp;</td>
 					<td align="center">
-					<p align="left"><a href="default.asp?ArtNr=10371">
+					<p align="left"><a href="default.asp?ArtNr=10307">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/8.gif"></a></td>
 				</tr>
 				<tr>
-					<td align="center" width="361">&nbsp;</td>
+					<td align="center" width="361" colspan="2">&nbsp;</td>
 					<td width="4">&nbsp;</td>
 					<td>
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right"><a href="default.asp?ArtNr=1688">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/9-1-1.gif"></a><a href="default.asp?ArtNr=1687"><img border="0" src="skins/skin_arfaian_2009/images/start/9-1-2.gif"></a><a href="default.asp?ArtNr=10136"><img border="0" src="skins/skin_arfaian_2009/images/start/9-1-3.gif"></a><a href="default.asp?ArtNr=10135"><img border="0" src="skins/skin_arfaian_2009/images/start/9-1-4.gif"></a></td>
 					<td width="4">
 					<p align="left">&nbsp;</td>
 					<td width="381">
-					<a href="default.asp?ArtNr=10077">
+					<a href="default.asp?ArtNr=10309">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/12.gif"></a></td>
 				</tr>
 				<tr>
-					<td align="center" width="361">&nbsp;</td>
+					<td align="center" width="361" colspan="2">&nbsp;</td>
 					<td width="4">&nbsp;</td>
 					<td>
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10390">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/11-3.gif"></a></td>
+					<a href="default.asp?ArtNr=10387">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/G069.gif"></a></td>
 					<td width="4">
 					<p align="left">&nbsp;</td>
 					<td>
@@ -214,29 +196,29 @@
 					<img border="0" src="skins/skin_arfaian_2009/images/start/14.gif"></a></td>
 				</tr>
 				<tr>
-					<td align="center" width="361">&nbsp;</td>
+					<td align="center" width="361" colspan="2">&nbsp;</td>
 					<td width="4">&nbsp;</td>
 					<td>
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
-					<p align="right"><a href="default.asp?ArtNr=10262">
+					<td align="center" width="361" colspan="2">
+					<p align="right"><a href="default.asp?ArtNr=10149">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/17.gif"></a></td>
 					<td width="4">
 					<p align="left">&nbsp;</td>
 					<td>
-					<p align="left"><a href="default.asp?ArtNr=10302">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/18.gif"></a></td>
+					<p align="left"><a href="default.asp?ArtNr=10088">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/18-1.gif"></a><a href="default.asp?ArtNr=10087"><img border="0" src="skins/skin_arfaian_2009/images/start/18-2.gif"></a></td>
 				</tr>
 				<tr>
-					<td align="center" width="361">&nbsp;</td>
+					<td align="center" width="361" colspan="2">&nbsp;</td>
 					<td width="4">&nbsp;</td>
 					<td>
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right"><a href="default.asp?ArtNr=10007">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/15.gif"></a></td>
 					<td width="4">
@@ -246,108 +228,35 @@
 					<img border="0" src="skins/skin_arfaian_2009/images/start/16.gif"></a></td>
 				</tr>
 				<tr>
-					<td align="center" width="361">&nbsp;</td>
+					<td align="center" width="361" colspan="2">&nbsp;</td>
 					<td width="4">&nbsp;</td>
 					<td>
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right"><a href="default.asp?ArtNr=629">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/13.gif"></a></td>
 					<td width="4">
 					<p align="left">&nbsp;</td>
 					<td>
-					<table border="0" width="104" cellspacing="0" cellpadding="0">
+					<table border="0" width="99%" cellspacing="0" cellpadding="0">
 						<tr>
-							<td rowspan="2" width="26">
-							<p align="left"><a href="default.asp?ArtNr=10441">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(1).gif"></a></td>
-							<td width="52" colspan="2">
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10441">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-1-1).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10442">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-1-2).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10443">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-1-3).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10444">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-1-4).gif"></a></td>
-							<td width="26">
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10450">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-1-1).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10451">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-1-2).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10452">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-1-3).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10453">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-1-4).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10454">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-1-5).gif"></a></td>
-						</tr>
-						<tr>
-							<td width="26">
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10455">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-1-1).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10456">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-1-2).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10457">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-1-3).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10458">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-1-4).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10459">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-1-5).gif"></a></td>
-							<td width="26">
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10460">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-2-1).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10461">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-2-2).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10462">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-2-3).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10463">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-2-4).gif"></a></p>
-							<p style="margin-top: 0; margin-bottom: 0" align="left">
-							<a href="default.asp?ArtNr=10464">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-1-2-2-5).gif"></a></td>
-							<td width="26">
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10445">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-2-1).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10446">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-2-2).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10447">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-2-3).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10448">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-2-4).gif"></a></p>
-							<p align="left" style="margin-top: 0; margin-bottom: 0">
-							<a href="default.asp?ArtNr=10449">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/3-2(2-2-2-5).gif"></a></td>
+							<td>
+					<p align="left" style="margin-top: 0; margin-bottom: 0">
+					<a href="default.asp?ArtNr=10530">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/U150.gif"></a></td>
+							<td width="352">
+					<p style="margin-top: 0; margin-bottom: 0" align="left">
+					<a href="default.asp?ArtNr=10529">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/U180.gif"></a></p>
+							</td>
 						</tr>
 					</table>
 					</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right">&nbsp;</td>
 					<td width="4">
 					<p align="left">&nbsp;</td>
@@ -355,7 +264,7 @@
 					<p align="left">&nbsp;</td>
 				</tr>
 				<tr>
-					<td align="center" width="361">
+					<td align="center" width="361" colspan="2">
 					<p align="right">&nbsp;</td>
 					<td width="4">
 					<p align="left">&nbsp;</td>
