--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
@@ -19,7 +19,20 @@ span.spelle
 
 <BODY>
 <div class='Section1'>
-    <p class='MsoNormal'><font face='Verdana' size='2'>Wir bestätigen dankend den Erhalt 
+    <p class="MsoNormal" align="center" style="text-align:center">
+	<font color="#FF0000"><b><br>
+	<span style="font-size: 25pt">ACHTUNG!</span></b><span style="font-size:25.0pt"><b><br>
+	<br>
+	Unsere Firma ist vom 22. Oktober – 6. November 2011 wegen Urlaubs 
+	geschlossen!</b></span></font></p>
+	<p class="MsoNormal" align="center" style="text-align: center">
+	<font color="#FF0000"><span lang="EN-US" style="font-size: 25.0pt"><b>Our 
+	company is closed from October 22 – November 6</b></span><b><span lang="EN-GB" style="font-size: 25.0pt"> 
+	2011!</span></b></font></p>
+	<p class="MsoNormal" align="center" style="text-align: center">&nbsp;</p>
+    <p class='MsoNormal'><font face='Verdana' size='2'><br>
+	<br>
+	Wir bestätigen dankend den Erhalt 
     folgender Bestellung:</font></div>
 <p>
 
@@ -143,8 +156,101 @@ jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
     Verkauf: Fröbelstrasse 24, A-4020 Linz, Austria<br />
     Firmenbuchnummer: 82801t<br />
     Handelsgericht: Landesgericht Linz<br />
-    Geschäftsführer: Doris Hockl<br />
+    Geschäftsführerin: Doris Hockl<br />
     UID-Nr.: ATU23315801</span></p>
+
+<p class="MsoNormal">&nbsp;</p>
+<p class="MsoNormal">&nbsp;</p>
+<p class="MsoNormal">&nbsp;</p>
+<p class="MsoNormal" style="line-height: normal"><b>
+<span lang="EN-US" style="font-size: 9.0pt; font-family: Arial,sans-serif">V e r 
+t r a g s a b s c h l u s s</span></b></p>
+<p class="MsoNormal" style="line-height: normal">
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Ihre Bestellung 
+stellt ein Angebot an uns zum Abschluss eines Vertrages dar. Wenn Sie eine 
+Bestellung aufgeben, erhalten Sie eine Bestätigung per E-Mail. Diese 
+Bestätigungsmail stellt noch keine Annahme dar.<br>
+Die Annahme des Angebots durch uns kann durch die Auslieferung der Ware erklärt 
+werden oder in dem wir in sonstiger Weise in Textform - z. B. schriftlich oder 
+per E-Mail - die Annahme der Bestellung bestätigen. Erst mit dieser Annahme 
+kommt der Vertrag zustande.</span></p>
+<p class="MsoNormal" style="line-height: normal">
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">&nbsp;<b>W i d e r r u 
+f s r e c h t </b></span></p>
+<p class="MsoNormal" style="line-height: normal"><i>
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Widerrufsbelehrung 
+(für österreichische Verbraucher)<br>
+</span></i><span style="font-size: 9.0pt; font-family: Arial,sans-serif"><br>
+Wenn Sie eine Privatperson sind und den Vertrag zu einem Zweck abschließen, der 
+weder ihrer gewerblichen noch ihrer selbständigen beruflichen Tätigkeit 
+zugerechnet werden kann, können Sie Ihre Bestellung innerhalb einer Frist von 7 
+Werktagen (Samstage zählen nicht) nach Erhalt der Ware zurückgeben. Dies ist 
+ohne Angaben von Gründen möglich. Zur Wahrung der Frist im Falle der Rücksendung 
+genügt die rechtzeitige Absendung der Rücktrittserklärung an unten angeführte 
+Adresse.<br>
+Wir halten ausdrücklich fest, dass die gesamten Kosten der Rücksendung der Ware 
+im Falle eines Vertragsrücktrittes vom Verbraucher zu tragen sind. Wenn Sie die 
+Ware bereits benutzt haben, sind wir berechtigt, hierfür eine Vergütung zu 
+verlangen. Ferner sind Sie verpflichtet, die Wertminderung zu ersetzen, falls 
+die Ware durch Sie beschädigt wurde.<br>
+<br>
+<br>
+<b><i><u>Widerrufsbelehrung (für deutsche Verbraucher)</u></i></b></span></p>
+<p class="MsoNormal" style="line-height: normal"><b>
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Widerrufsrecht</span></b></p>
+<p class="MsoNormal" style="line-height: normal">
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Sie können Ihre 
+Vertragserklärung innerhalb von 14 Tagen ohne Angabe von Gründen in Textform (z. 
+B. Brief, Fax, E-Mail) oder - wenn Ihnen die Sache vor Fristablauf überlassen 
+wird – auch durch Rücksendung der Sache widerrufen. Die Frist beginnt nach 
+Erhalt dieser Belehrung in Textform, jedoch nicht vor Eingang der Ware beim 
+Empfänger (bei der wiederkehrenden Lieferung gleichartiger Waren nicht vor 
+Eingang der ersten Teillieferung) und auch nicht vor Erfüllung unserer 
+Informationspflichten gemäß Artikel 246 § 2 in Verbindung mit § 1 Absatz 1 und 2 
+EGBGB sowie unserer Pflichten gemäß § 312 g Absatz 1 Satz 1 BGB in Verbindung 
+mit Artikel 246 § 3 EGBGB. Zur Wahrung der Widerrufsfrist genügt die 
+rechtzeitige Absendung des Widerrufs oder der Sache. Der Widerruf ist zu richten 
+an:&nbsp;&nbsp;</span></p>
+<p class="MsoNormal" style="line-height: normal">
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
+Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Arfaian Export-Import Handelsgesellschaft m.b.H.<br>
+Anschrift:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fröbelstraße 24, A-4020 Linz, Austria <br>
+Telefax: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; + 43 (0) 732 660101 - 40<br>
+E-Mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; online@arfaian.com</span></p>
+<p class="MsoNormal" style="line-height: normal"><b>
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Widerrufsfolgen</span></b></p>
+<p class="MsoNormal" style="line-height: normal">
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Im Falle eines 
+wirksamen Widerrufs sind die beiderseits empfangenen Leistungen zurück zu 
+gewähren und ggf. gezogene Nutzungen (z. B. Zinsen) herauszugeben. Können Sie 
+uns die empfangene Leistung sowie Nutzungen (z. B. Gebrauchsvorteile) nicht oder 
+teilweise nicht oder nur in verschlechtertem Zustand zurückgewähren 
+beziehungsweise herausgeben, müssen Sie uns insoweit Wertersatz leisten. Für die 
+Verschlechterung der Sache und für gezogene Nutzungen müssen Sie Wertersatz nur 
+leisten, soweit die Nutzungen oder die Verschlechterung auf einen Umgang mit der 
+Sache zurückzuführen ist, der über die Prüfung der Eigenschaften und der 
+Funktionsweise hinausgeht. Unter „Prüfung der Eigenschaften und der 
+Funktionsweise“ versteht man das Testen und Ausprobieren der jeweiligen Ware, 
+wie es etwa im Ladengeschäft möglich und üblich ist. Paketversandfähige Sachen 
+sind auf unsere Gefahr zurückzusenden. Sie haben die regelmäßigen Kosten der 
+Rücksendung zu tragen, wenn die gelieferte Ware der Bestellten entspricht und 
+wenn der Preis der zurückzusendenden Sache einen Betrag von 40 Euro nicht 
+übersteigt oder wenn Sie bei einem höheren Preis der Sache zum Zeitpunkt des 
+Widerrufs noch nicht die Gegenleistung oder eine vertraglich vereinbarte 
+Teilzahlung erbracht haben. Anderenfalls ist die Rücksendung für Sie kostenfrei. 
+Nicht paketversandfähige Sachen werden bei Ihnen abgeholt. Verpflichtungen zur 
+Erstattung von Zahlungen müssen innerhalb von 30 Tagen erfüllt werden. Die Frist 
+beginnt für Sie mit der Absendung Ihrer Widerrufserklärung oder der Sache, für 
+uns mit deren Empfang. <br>
+<br>
+Wir haben das Recht, im Falle eines Widerrufs die zurück zu sendende Sache durch 
+einen Dienstleister bei Ihnen abholen zu lassen.<br>
+<b><i><u><br>
+Ende der Widerrufsbelehrung</u></i></b></span></p>
+<p class="MsoNormal" style="line-height: normal">
+<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Das Widerrufsrecht 
+gilt nicht für gewerbliche Abnehmer oder Unternehmer.</span></p>
+<p class="MsoNormal">&nbsp;</p>
 
 </BODY>
 </HTML>
