--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function1_1.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function1_1.htm
@@ -14,13 +14,11 @@
 			<table border="0" width="743" id="table15" cellspacing="0" cellpadding="0">
 				<tr>
 					<td align="center" width="731" style="height: 38px" colspan="4">
-					&nbsp;</td>
+					<b><font color="#CC1008" face="Verdana" size="6">Willkommen bei arfaian.com<br>Welcome at arfaian.com</font></b></td>
 				</tr>
 				<tr>
 					<td align="center" width="1100" style="height: 38px" colspan="4">
-					<p><br>
-					<img border="0" src="skins/skin_arfaian_2009/images/start/vacation.gif"><br>
-&nbsp;</td>
+					<p>&nbsp;</td>
 				</tr>
 				<tr>
 					<td align="center" width="331">
