--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
@@ -19,20 +19,7 @@ span.spelle
 
 <BODY>
 <div class='Section1'>
-    <p class="MsoNormal" align="center" style="text-align:center">
-	<font color="#FF0000"><b><br>
-	<span style="font-size: 25pt">ACHTUNG!</span></b><span style="font-size:25.0pt"><b><br>
-	<br>
-	Unsere Firma ist vom 22. Oktober – 6. November 2011 wegen Urlaubs 
-	geschlossen!</b></span></font></p>
-	<p class="MsoNormal" align="center" style="text-align: center">
-	<font color="#FF0000"><span lang="EN-US" style="font-size: 25.0pt"><b>Our 
-	company is closed from October 22 – November 6</b></span><b><span lang="EN-GB" style="font-size: 25.0pt"> 
-	2011!</span></b></font></p>
-	<p class="MsoNormal" align="center" style="text-align: center">&nbsp;</p>
-    <p class='MsoNormal'><font face='Verdana' size='2'><br>
-	<br>
-	Wir bestätigen dankend den Erhalt 
+    <p class='MsoNormal'><font face='Verdana' size='2'>Wir bestätigen dankend den Erhalt 
     folgender Bestellung:</font></div>
 <p>
 
