--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function1.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function1.htm
@@ -18,21 +18,19 @@
 				</tr>
 				<tr>
 					<td align="center" width="1100" style="height: 38px" colspan="4">
-					<p><br>
-					<img border="0" src="skins/skin_arfaian_2009/images/start/vacation.gif"><br>
-&nbsp;</td>
+					<p>&nbsp;</td>
 				</tr>
 				<tr>
 					<td align="center" width="331">
 					<p align="right" style="margin-top: 0; margin-bottom: 0">
-					<a href="default.asp?ArtNr=10475">
+					<a href="default.asp?ArtNr=193">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/D476-1.gif"></a></td>
 					<td align="center" width="27">
 					<p style="margin-top: 0; margin-bottom: 0" align="left">
-					<a href="default.asp?ArtNr=10475">
+					<a href="default.asp?ArtNr=193">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/D476-2-1.gif"></a></p>
 					<p style="margin-top: 0; margin-bottom: 0" align="left">
-					<a href="default.asp?ArtNr=10229">
+					<a href="default.asp?ArtNr=343">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/D476-2-2.gif"></a></td>
 					<td align="center" width="4">&nbsp;</td>
 					<td align="center">
